# oaapi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: audio_speech.rs  audio_transcriptions.rs  audio_transcriptions_json.rs  audio_transcriptions_srt.rs  audio_transcriptions_timestamp_granularities.rs  audio_transcriptions_verbose_json.rs  audio_transcriptions_vtt.rs  audio_translations.rs  chat_completions.rs  chat_completions_json.rs  chat_completions_limited.rs  chat_completions_stream.rs  chat_completions_tool.rs  chat_completions_vision.rs
src/: api_key.rs  audio.rs  chat.rs  client.rs  error.rs  lib.rs  macros.rs  organization_id.rs  prompt.rs  result.rs  stream_line_reader.rs  temperature.rs
src/audio/: api.rs  error.rs  file.rs  language.rs  model.rs  response_format.rs  result.rs  speech_input.rs  speed.rs  timestamp_granularity.rs  voice.rs
src/audio/api/: speech.rs  transcriptions.rs  translations.rs
src/chat/: api.rs  assistant_message.rs  bias.rs  chat_completion_chunk_object.rs  chat_completion_object.rs  chunk_stream.rs  error.rs  logprobs.rs  logprobs_option.rs  max_tokens.rs  message.rs  model.rs  penalty.rs  response_format.rs  result.rs  role.rs  stop_option.rs  stream_line_reader.rs  stream_option.rs  system_message.rs  tool.rs  tool_choice.rs  tool_message.rs  top_logprobs.rs  top_p.rs  user_message.rs
src/chat/api/: completions.rs
