[package]
name = "oaapi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.5.*"
futures = "^0.3.*"
futures-util = "^0.3.*"
reqwest = { version = "^0.11.*", features = ["multipart", "json", "stream"] }
serde = { version = "^1.0.*", features = ["derive"] }
serde_json = "^1.0.*"
subtp = "^0.1.*"
thiserror = "^1.0.*"
tokio = { version = "^1.35.*", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
ctrlc = "3.4.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
